<resources>
    <string name="app_name">Carpooling</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_confirm_password">Confirmar contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_up">Registrarse</string>
    <string name="title_activity_driver_map">Map</string>
</resources>
